--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -15,30 +15,30 @@
                 <TranslateTransform/>
             </TransformGroup>
         </Grid.RenderTransform>
-        <Button Grid.Row="1" Grid.Column="1" Content="+/-" HorizontalAlignment="Left" Margin="15,868,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="0" HorizontalAlignment="Left" Margin="175,870,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="=" HorizontalAlignment="Left" Margin="495,870,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="1" HorizontalAlignment="Left" Margin="17,750,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="2" HorizontalAlignment="Left" Margin="177,750,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="3" HorizontalAlignment="Left" Margin="337,750,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="+" HorizontalAlignment="Left" Margin="497,750,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="4" HorizontalAlignment="Left" Margin="17,631,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="5" HorizontalAlignment="Left" Margin="177,631,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="6" HorizontalAlignment="Left" Margin="338,631,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="-" HorizontalAlignment="Left" Margin="497,631,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="7" HorizontalAlignment="Left" Margin="17,512,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="8" HorizontalAlignment="Left" Margin="177,512,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="9" HorizontalAlignment="Left" Margin="338,512,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="*" HorizontalAlignment="Left" Margin="499,512,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="1/x" HorizontalAlignment="Left" Margin="16,398,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="x2" HorizontalAlignment="Left" Margin="176,398,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="2√x" HorizontalAlignment="Left" Margin="337,398,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="/" HorizontalAlignment="Left" Margin="498,398,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="%" HorizontalAlignment="Left" Margin="17,282,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="CE" HorizontalAlignment="Left" Margin="177,282,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="C" HorizontalAlignment="Left" Margin="338,282,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="&lt;--" HorizontalAlignment="Left" Margin="499,282,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="," HorizontalAlignment="Left" Margin="337,871,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="NumberButton_Click"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="+/-" HorizontalAlignment="Left" Margin="15,868,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="0" HorizontalAlignment="Left" Margin="175,870,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="=" HorizontalAlignment="Left" Margin="495,870,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="1" HorizontalAlignment="Left" Margin="17,750,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="2" HorizontalAlignment="Left" Margin="177,750,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="3" HorizontalAlignment="Left" Margin="337,750,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="+" HorizontalAlignment="Left" Margin="497,750,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="4" HorizontalAlignment="Left" Margin="17,631,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="5" HorizontalAlignment="Left" Margin="177,631,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="6" HorizontalAlignment="Left" Margin="338,631,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="-" HorizontalAlignment="Left" Margin="497,631,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="7" HorizontalAlignment="Left" Margin="17,512,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="8" HorizontalAlignment="Left" Margin="177,512,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="9" HorizontalAlignment="Left" Margin="338,512,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="*" HorizontalAlignment="Left" Margin="499,512,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="1/x" HorizontalAlignment="Left" Margin="16,398,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="x2" HorizontalAlignment="Left" Margin="176,398,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="2√x" HorizontalAlignment="Left" Margin="337,398,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="/" HorizontalAlignment="Left" Margin="498,398,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="%" HorizontalAlignment="Left" Margin="17,282,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="CE" HorizontalAlignment="Left" Margin="177,282,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="C" HorizontalAlignment="Left" Margin="338,282,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="BACK" HorizontalAlignment="Left" Margin="499,282,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="," HorizontalAlignment="Left" Margin="337,871,0,0" VerticalAlignment="Top" Height="106" Width="150" FontSize="24" Click="Klik"/>
         <Label Name="label" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" MinWidth="200" MinHeight="100" FontSize="48" Margin="7,9,0,0" Height="243" Width="659" />
     </Grid>
 </Window>
